--- a/XYD_intro_he.html
+++ b/XYD_intro_he.html
@@ -12,11 +12,11 @@
     <meta property="og:title" content="XYD Laboratory - שירותי דפוס ומשי">
     <meta property="og:description" content="הפכו את הרעיונות שלכם למציאות עם שירותי הדפסה האיכותיים של XYD Laboratory.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://xydlaboratory.space/he">
+    <meta property="og:url" content="https://xydlaboratory.space/xydinex_he">
     <meta property="og:image" content="https://xydlaboratory.space/images/preview.jpg">
     <meta property="og:locale" content="he_IL">
-    <link rel="alternate" hreflang="uk" href="https://xydlaboratory.space/uk">
-    <link rel="alternate" hreflang="en" href="https://xydlaboratory.space/en">
+    <link rel="alternate" hreflang="uk" href="https://xydlaboratory.space/xydindex_uk.html">
+    <link rel="alternate" hreflang="en" href="https://xydlaboratory.space/index.html">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/base.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
