--- a/XYD_intro_en.html
+++ b/XYD_intro_en.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="XYD Laboratory - Screen Printing and Stenciling Services">
     <meta property="og:description" content="Bring your ideas to life with XYD Laboratory's screen printing services. Quality craftsmanship and custom designs tailored to your needs.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://xydlaboratory.space/en">
+    <meta property="og:url" content="https://xydlaboratory.space/index.html">
     <meta property="og:image" content="https://xydlaboratory.space/images/preview.jpg">
     <meta property="og:locale" content="en_US">
     <link rel="alternate" hreflang="uk" href="https://xydlaboratory.space/XYD_intro_uk.html">
