--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <meta property="og:url" content="https://xydlaboratory.space/index.html">
     <meta property="og:image" content="https://xydlaboratory.space/images/preview.jpg">
     <meta property="og:locale" content="en_US">
-    <link rel="alternate" hreflang="uk" href="https://xydlaboratory.space/XYD_intro_uk.html">
-    <link rel="alternate" hreflang="he" href="https://xydlaboratory.space/XYD_intro_he.html">
+    <link rel="alternate" hreflang="uk" href="https://xydlaboratory.space/index_uk.html">
+    <link rel="alternate" hreflang="he" href="https://xydlaboratory.space/intro_he.html">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/base.css">
 	<script>
@@ -217,8 +217,8 @@
 				</div>
 				<div class="intro__location animatable"> 140 Levinski Str, Tel Aviv, 6602043</div>
 				<div class="intro__social animatable">
-					<a href="xyd_intro_he.html" class="intro__social-item">HE</a>
-					<a href="xyd_intro_uk.html" class="intro__social-item">UA</a>
+					<a href="intro_he.html" class="intro__social-item">HE</a>
+					<a href="intro_uk.html" class="intro__social-item">UA</a>
 					<a href="#" class="intro__social-item">EN</a>
 				</div>
 				
