--- a/index_he.html
+++ b/index_he.html
@@ -12,10 +12,10 @@
     <meta property="og:title" content="XYD Laboratory - שירותי דפוס ומשי">
     <meta property="og:description" content="הפכו את הרעיונות שלכם למציאות עם שירותי הדפסה האיכותיים של XYD Laboratory.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://xydlaboratory.space/xydinex_he">
+    <meta property="og:url" content="https://xydlaboratory.space/index_he.html">
     <meta property="og:image" content="https://xydlaboratory.space/images/preview.jpg">
     <meta property="og:locale" content="he_IL">
-    <link rel="alternate" hreflang="uk" href="https://xydlaboratory.space/xydindex_uk.html">
+    <link rel="alternate" hreflang="uk" href="https://xydlaboratory.space/index-uk.html">
     <link rel="alternate" hreflang="en" href="https://xydlaboratory.space/index.html">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/base.css">
@@ -207,8 +207,8 @@
     <div class="intro__location animatable">רחוב לבינסקי 140, תל אביב, 6602043</div>
     <div class="intro__social animatable">
         <a href="#" class="intro__social-item">HE</a>
-        <a href="xyd_intro_uk.html" class="intro__social-item">UA</a>
-        <a href="xyd_intro_en.html" class="intro__social-item">EN</a>
+        <a href="index_uk.html" class="intro__social-item">UA</a>
+        <a href="index.html" class="intro__social-item">EN</a>
     </div>
 </div>
 <nav class="menu">
