--- a/index_uk.html
+++ b/index_uk.html
@@ -11,11 +11,11 @@
     <meta property="og:title" content="XYD Laboratory - Послуги шовкотрафаретного друку">
     <meta property="og:description" content="Перенесіть свої ідеї в життя за допомогою шовкотрафаретного друку XYD Laboratory. Якість та індивідуальність для кожного проєкту.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://xydlaboratory.space/uk">
+    <meta property="og:url" content="https://xydlaboratory.space/index_uk.html">
     <meta property="og:image" content="https://xydlaboratory.space/images/preview.jpg">
     <meta property="og:locale" content="uk_UA">
-    <link rel="alternate" hreflang="en" href="https://xydlaboratory.space/XYD_intro_en.html">
-    <link rel="alternate" hreflang="he" href="https://xydlaboratory.space/XYD_intro_he.html">
+    <link rel="alternate" hreflang="en" href="https://xydlaboratory.space/index.html">
+    <link rel="alternate" hreflang="he" href="https://xydlaboratory.space/index_he.html">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/base.css">
 	<script>
@@ -203,9 +203,9 @@
 				</div>
 				<div class="intro__location animatable"> 140 Levinski Str, Tel Aviv, 6602043</div>
 				<div class="intro__social animatable">
-					<a href="XYD_intro_he.html" class="intro__social-item">HE</a>
+					<a href="index_he.html" class="intro__social-item">HE</a>
 					<a href="#" class="intro__social-item">UA</a>
-					<a href="XYD_intro_en.html" class="intro__social-item">EN</a>
+					<a href="index.html" class="intro__social-item">EN</a>
 				</div>
 				
 			</div>
