social links updated

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:image" content="https://xydlaboratory.space/images/preview.jpg">
     <meta property="og:locale" content="en_US">
     <link rel="alternate" hreflang="uk" href="https://xydlaboratory.space/index_uk.html">
-    <link rel="alternate" hreflang="he" href="https://xydlaboratory.space/intro_he.html">
+    <link rel="alternate" hreflang="he" href="https://xydlaboratory.space/index_he.html">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/base.css">
 	<script>
@@ -176,11 +176,11 @@
 							    padding: 0px 0 0 1rem;
 							">Start your order</h3>
 					        <p class="slideshow__item-subtitle">High-quality screen printing with no minimum order.</p>
-					        <a href="#" class="cta-button">Telegram</a>
-					        <a href="#" class="cta-button">Whatsup</a>
+					        <a href="https://t.me/xydlab" class="cta-button">Telegram</a>
+					        <a href="https://wa.me/972504432225" class="cta-button">Whatsup</a>
 					        
-					        <a href="#" class="cta-button">Instagram</a>
-					        <a href="#" class="cta-button">Email</a>
+					        <a href="https://www.instagram.com/xydprintstudio?igsh=eWpxeXczZWRtOHFj&utm_source=qr" class="cta-button">Instagram</a>
+					        <a href="xydtalk@gmail.com" class="cta-button">Email</a>
 					</div>
 					
 				</div><!-- /slideshow -->
