--- a/index_he.html
+++ b/index_he.html
@@ -166,10 +166,10 @@
                     padding: 0px 0 0 1rem;
                 ">התחילו את ההזמנה</h3>
                 <p class="slideshow__item-subtitle">שירותי הדפסה איכותיים ללא דרישת מינימום.</p>
-                <a href="#" class="cta-button">טלגרם</a>
-                <a href="#" class="cta-button">וואטסאפ</a>
-                <a href="#" class="cta-button">אינסטגרם</a>
-                <a href="#" class="cta-button">אימייל</a>
+                <a href="https://t.me/xydlab" class="cta-button">טלגרם</a>
+                <a href="https://wa.me/972504432225" class="cta-button">וואטסאפ</a>
+                <a href="https://www.instagram.com/xydprintstudio?igsh=eWpxeXczZWRtOHFj&utm_source=qr" class="cta-button">אינסטגרם</a>
+                <a href="xydtalk@gmail.com" class="cta-button">אימייל</a>
             </div>
         </div>
     </div>
