--- a/index_uk.html
+++ b/index_uk.html
@@ -162,10 +162,11 @@
                     padding: 0px 0 0 1rem;
                 ">Розпочати замовлення</h3>
                 <p class="slideshow__item-subtitle">Високоякісний трафаретний друк без мінімального замовлення.</p>
-                <a href="#" class="cta-button">Telegram</a>
-                <a href="#" class="cta-button">Whatsup</a>
-                <a href="#" class="cta-button">Instagram</a>
-                <a href="#" class="cta-button">Email</a>
+                <a href="https://t.me/xydlab" class="cta-button">Telegram</a>
+                            <a href="https://wa.me/972504432225" class="cta-button">Whatsup</a>
+                            
+                            <a href="https://www.instagram.com/xydprintstudio?igsh=eWpxeXczZWRtOHFj&utm_source=qr" class="cta-button">Instagram</a>
+                            <a href="xydtalk@gmail.com" class="cta-button">Email</a>
             </div>
         </div>
     </div><!-- /slideshow -->
