--- a/index_he.html
+++ b/index_he.html
@@ -90,7 +90,7 @@
                 <h3 class="slideshow__item-title">הדפסות על בגדים</h3>
                 <p class="slideshow__item-subtitle">בגדים עם אישיות. אנו הופכים את העיצובים שלכם למיוחדים וייחודיים.</p>
                 <div class="cta-button-container">
-                    <button class="cta-button-gallery" data-images='["img/shoper5.jpg", "img/shoper2.jpg", "img/shoper3.jpg"]'>צפו בפריטים</button>
+                    <button class="cta-button-gallery" data-images='["img/clothesVar.jpg", "img/clothesVar1.jpg", "img/clothes1.jpg", "img/clothes2.jpg", "img/clothes3.jpg", "img/clothes4.jpg", "img/clothes011.jpg", "img/clothes013.jpg", "img/clothes6.jpg", "img/clothes7.jpg", "img/clothes8.jpg", "img/clothes012.jpg", "img/big1.jpg"]'>צפו בפריטים</button>
                 </div>
             </div>
         </div>
@@ -169,7 +169,7 @@
                 <a href="https://t.me/xydlab" class="cta-button">טלגרם</a>
                 <a href="https://wa.me/972504432225" class="cta-button">וואטסאפ</a>
                 <a href="https://www.instagram.com/xydprintstudio?igsh=eWpxeXczZWRtOHFj&utm_source=qr" class="cta-button">אינסטגרם</a>
-                <a href="xydtalk@gmail.com" class="cta-button">אימייל</a>
+                <a href="mailto:xydtalk@gmail.com" class="cta-button">אימייל</a>
             </div>
         </div>
     </div>
@@ -197,13 +197,13 @@
         <a class="intro__enter animatable">סטודיו</a>
     </div>
     <div class="intro__content intro__content--second animatable">
-        <h3 class="intro__content-title animatable">order@xydlaboratory.space</h3>
-        <a href="mailto:order@xydlaboratory.space"><p class="intro__content-text animatable">order@xydlaboratory.space</p></a>
-    </div>
-    <div class="intro__content intro__content--forth animatable">
-        <h3 class="intro__content-title animatable">אינסטגרם</h3>
-        <!-- <a href="https://www.instagram.com/xydprintstudio"><p class="intro__content-text animatable">@xydprintstudio</p></a> -->
-    </div>
+                    <a href="mailto:order@xydlaboratory.space"><h3 class="intro__content-title animatable">order@xydlaboratory.space</h3></a><p class="intro__content-text animatable">contact us</p>
+                    
+                </div>
+                <div class="intro__content intro__content--forth animatable">
+                    <a href="https://www.instagram.com/xydprintstudio"><h3 class="intro__content-title animatable">@xydprintstudio</h3></a>
+                    <p class="intro__content-text animatable">instagram</p>
+                </div>
     <div class="intro__location animatable">רחוב לבינסקי 140, תל אביב, 6602043</div>
     <div class="intro__social animatable">
         <a href="#" class="intro__social-item">HE</a>
