--- a/index_uk.html
+++ b/index_uk.html
@@ -86,8 +86,9 @@
                 <h3 class="slideshow__item-title">Друк на одязі</h3>
                 <p class="slideshow__item-subtitle">Одяг з характером. Ми робимо ваші дизайни унікальними та стильними.</p>
                 <div class="cta-button-container">
-                    <button class="cta-button-gallery" data-images='["img/shoper5.jpg", "img/shoper2.jpg", "img/shoper3.jpg"]'>Переглянути вироби</button>
-                </div>
+                                <button class="cta-button-gallery" data-images='["img/clothesVar.jpg", "img/clothesVar1.jpg", "img/clothes1.jpg", "img/clothes2.jpg", "img/clothes3.jpg", "img/clothes4.jpg", "img/clothes011.jpg", "img/clothes013.jpg", "img/clothes6.jpg", "img/clothes7.jpg", "img/clothes8.jpg", "img/clothes012.jpg", "img/big1.jpg"]'>Приклади робіт
+                                </button>
+                            </div>
             </div>
         </div>
         <div class="slideshow__item">
@@ -99,7 +100,7 @@
                 <h3 class="slideshow__item-title">Друк на дитячому одязі</h3>
                 <p class="slideshow__item-subtitle">Безпека і комфорт. Наш друк на дитячому одязі створений з турботою про наймолодших.</p>
                 <div class="cta-button-container">
-                    <button class="cta-button-gallery" data-images='["img/shoper5.jpg", "img/shoper2.jpg", "img/shoper3.jpg"]'>Переглянути вироби</button>
+                    <button class="cta-button-gallery" data-images='["img/shoper5.jpg", "img/shoper2.jpg", "img/shoper3.jpg"]'>Приклади робіт</button>
                 </div>
             </div>
         </div>
@@ -112,7 +113,7 @@
                 <h3 class="slideshow__item-title">Друк постерів</h3>
                 <p class="slideshow__item-subtitle">Ваші ідеї на папері. Ми створюємо постери, які залишають незабутнє враження.</p>
                 <div class="cta-button-container">
-                    <button class="cta-button-gallery" data-images='["img/shoper5.jpg", "img/shoper2.jpg", "img/shoper3.jpg"]'>Переглянути вироби</button>
+                    <button class="cta-button-gallery" data-images='["img/shoper5.jpg", "img/shoper2.jpg", "img/shoper3.jpg"]'>Приклади робіт</button>
                 </div>
             </div>
         </div>
@@ -166,7 +167,7 @@
                             <a href="https://wa.me/972504432225" class="cta-button">Whatsup</a>
                             
                             <a href="https://www.instagram.com/xydprintstudio?igsh=eWpxeXczZWRtOHFj&utm_source=qr" class="cta-button">Instagram</a>
-                            <a href="xydtalk@gmail.com" class="cta-button">Email</a>
+                            <a href="mailto:xydtalk@gmail.com" class="cta-button">Email</a>
             </div>
         </div>
     </div><!-- /slideshow -->
@@ -195,13 +196,13 @@
 					<a class="intro__enter animatable">Студiя</a>
 				</div>
 				<div class="intro__content intro__content--second animatable">
-					<h3 class="intro__content-title animatable">Для замовлень</h3>
-					<a href="mailto:order@xydlaboratory.space"><p class="intro__content-text animatable">order@xydlaboratory.space</p></a>
-				</div>
-				<div class="intro__content intro__content--forth animatable">
-					<h3 class="intro__content-title animatable">Iнстаграм</h3>
-					<a href="https://www.instagram.com/xydprintstudio"><p class="intro__content-text animatable">@xydprintstudio</p></a>
-				</div>
+                    <a href="mailto:order@xydlaboratory.space"><h3 class="intro__content-title animatable">order@xydlaboratory.space</h3></a><p class="intro__content-text animatable">contact us</p>
+                    
+                </div>
+                <div class="intro__content intro__content--forth animatable">
+                    <a href="https://www.instagram.com/xydprintstudio"><h3 class="intro__content-title animatable">@xydprintstudio</h3></a>
+                    <p class="intro__content-text animatable">instagram</p>
+                </div>
 				<div class="intro__location animatable"> 140 Levinski Str, Tel Aviv, 6602043</div>
 				<div class="intro__social animatable">
 					<a href="index_he.html" class="intro__social-item">HE</a>
