--- a/index_he.html
+++ b/index_he.html
@@ -103,8 +103,9 @@
                 <h3 class="slideshow__item-title">הדפסות על בגדי ילדים</h3>
                 <p class="slideshow__item-subtitle">בטיחות ונוחות. ההדפסות שלנו על בגדי ילדים נעשות עם דאגה לצעירים ביותר.</p>
                 <div class="cta-button-container">
-                    <button class="cta-button-gallery" data-images='["img/shoper5.jpg", "img/shoper2.jpg", "img/shoper3.jpg"]'>צפו בפריטים</button>
-                </div>
+                                        <button class="cta-button-gallery" data-images='["img/kids1.jpg", "img/kids2.jpg", "img/kids3.jpg"]'>צפו בפריטים
+                                </button>
+                            </div>
             </div>
         </div>
         <div class="slideshow__item">
@@ -116,7 +117,11 @@
                 <h3 class="slideshow__item-title">הדפסות פוסטרים</h3>
                 <p class="slideshow__item-subtitle">הרעיונות שלכם על נייר. אנו יוצרים פוסטרים שמשאירים רושם מתמשך.</p>
                 <div class="cta-button-container">
-                    <button class="cta-button-gallery" data-images='["img/shoper5.jpg", "img/shoper2.jpg", "img/shoper3.jpg"]'>צפו בפריטים</button>
+                    <button 
+                                            class="cta-button-gallery" 
+                                            data-images='["img/poster2.jpg", "img/poster3.jpg", "img/poster4.jpg", "img/poster5.jpg"]'>
+                                צפו בפריטים
+                                        </button>
                 </div>
             </div>
         </div>
@@ -129,7 +134,11 @@
                 <h3 class="slideshow__item-title">הדפסות על שקיות בד</h3>
                 <p class="slideshow__item-subtitle">סגנון ופונקציונליות. שקיות בד שתרצו לקחת איתכם תמיד.</p>
                 <div class="cta-button-container">
-                    <button class="cta-button-gallery" data-images='["img/shoper5.jpg", "img/shoper2.jpg", "img/shoper3.jpg"]'>צפו בפריטים</button>
+                     <button 
+                                            class="cta-button-gallery" 
+                                            data-images='["img/3.jpg", "img/shoper2.jpg", "img/shoper3.jpg", "img/shoper4.jpg", "img/shoper5.jpg", "img/shoper6.jpg", "img/shoper7.jpg", "img/shoper8.jpg", "img/shoper9.jpg"]'>
+                                צפו בפריטים
+                                        </button>
                 </div>
             </div>
         </div>
@@ -177,8 +186,8 @@
         <span class="close-modal">&times;</span>
         <div class="gallery-modal-content">
             <div id="gallerySwipeContainer" class="gallery-modal-images"></div>
-            <button class="gallery-prev" onclick="window.gallery.prevImage()">&#10094;</button>
-            <button class="gallery-next" onclick="window.gallery.nextImage()">&#10095;</button>
+            <button class="gallery-prev" dir="ltr" onclick="window.gallery.prevImage()">&#10094;</button>
+            <button class="gallery-next" dir="ltr" onclick="window.gallery.nextImage()">&#10095;</button>
         </div>
     </div>
 </div>
@@ -197,7 +206,7 @@
         <a class="intro__enter animatable">סטודיו</a>
     </div>
     <div class="intro__content intro__content--second animatable">
-                    <a href="mailto:order@xydlaboratory.space"><h3 class="intro__content-title animatable">order@xydlaboratory.space</h3></a><p class="intro__content-text animatable">contact us</p>
+                    <a href="mailto:xydtalk@gmail.com"><h3 class="intro__content-title animatable">order@xydlaboratory.space</h3></a><p class="intro__content-text animatable">contact us</p>
                     
                 </div>
                 <div class="intro__content intro__content--forth animatable">
@@ -216,9 +225,9 @@
         <div class="menu__item-inner">
             <div class="mainmenu">
                 <p class="label1 label--topleft label--line">כתבו לנו במייל:</p>
-                <a href="mailto:order@xydlaboratory.space" class="mainmenu__item" style="text-decoration: underline; font-weight: bold">order@</a>
-                <a href="mailto:order@xydlaboratory.space" class="mainmenu__item" style="text-decoration: underline;font-weight: bold">xydlaboratory.</a>
-                <a href="mailto:order@xydlaboratory.space" class="mainmenu__item" style="text-decoration: underline;font-weight: bold">space</a>
+                <a href="mailto:xydtalk@gmail.com" class="mainmenu__item" style="text-decoration: underline; font-weight: bold">order@</a>
+                <a href="mailto:xydtalk@gmail.com" class="mainmenu__item" style="text-decoration: underline;font-weight: bold">xydlaboratory.</a>
+                <a href="mailto:xydtalk@gmail.com" class="mainmenu__item" style="text-decoration: underline;font-weight: bold">space</a>
             </div>
             <p class="label label--topleft label--vert-mirror">הדברים החשובים</p>
             <p class="label label--bottomright label--vert">נוצר על ידי Sadage</p>
@@ -265,7 +274,7 @@
         <script src="js/TweenMax.min.js"></script>
         <script src="js/anime.min.js"></script>
         <script src="js/demo.js"></script>
-        <script src="js/modal.js"></script>
+        <script src="js/modal-he.js"></script>
 <script>
     
 
@@ -286,6 +295,7 @@
     });
 });
 </script>
+
 
 
 </body>
