--- a/index.html
+++ b/index.html
@@ -100,12 +100,9 @@
 							<h3 class="slideshow__item-title">Kids Clothes Printing</h3>
 							<p class="slideshow__item-subtitle">Safety and comfort. Our children’s clothing printing is made with care for the youngest.</p>
 							<div class="cta-button-container">
-							            <button 
-							                class="cta-button-gallery" 
-							                onclick="openGallery(['img/clothes1.jpg', 'img/clothes2.jpg', 'img/clothes3.jpg'])">
-							    View Items
-							            </button>
-							        </div>
+							            <button class="cta-button-gallery" data-images='["img/kids1.jpg", "img/kids2.jpg", "img/kids3.jpg"]'>View Examples
+            					</button>
+							</div>
 						</div>
 					</div>
 					<div class="slideshow__item">
@@ -119,8 +116,8 @@
 							<div class="cta-button-container">
 							            <button 
 							                class="cta-button-gallery" 
-							                data-images='["img/shoper5.jpg", "img/shoper2.jpg", "img/shoper3.jpg"]'>
-							    View Items
+							                data-images='["img/poster2.jpg", "img/poster3.jpg", "img/poster4.jpg", "img/poster5.jpg"]'>
+							    View Examples
 							            </button>
 							        </div>
 						</div>
@@ -136,8 +133,8 @@
 							<div class="cta-button-container">
 							            <button 
 							                class="cta-button-gallery" 
-							                data-images='["https://xydlaboratory.space/img/shoper5.jpg", "https://xydlaboratory.space/img/shoper2.jpg", "https://xydlaboratory.space/img/shoper3.jpg"]'>
-							    View Items
+							                data-images='["img/3.jpg", "img/shoper2.jpg", "img/shoper3.jpg", "img/shoper4.jpg", "img/shoper5.jpg", "img/shoper6.jpg", "img/shoper7.jpg", "img/shoper8.jpg", "img/shoper9.jpg"]'>
+							    View Examples
 							            </button>
 							</div>
 						</div>
@@ -158,7 +155,7 @@
 						</div>
 						<span class="slideshow__item-number"></span>
 						<div class="slideshow__item-titlewrap">
-							<h3 class="slideshow__item-title">Custom corporate printing</h3>
+							<h3 class="slideshow__item-title">Custom Corporate Printing</h3>
 							<p class="slideshow__item-subtitle">We handle corporate orders of any scale. From small batches to large volumes, we ensure high-quality printing tailored to your business needs.</p>
 						</div>
 					</div>
@@ -174,7 +171,7 @@
 							    font-weight: normal;
 							    position: relative;
 							    padding: 0px 0 0 1rem;
-							">Start your order</h3>
+							">Start Your Order</h3>
 					        <p class="slideshow__item-subtitle">High-quality screen printing with no minimum order.</p>
 					        <a href="https://t.me/xydlab" class="cta-button">Telegram</a>
 					        <a href="https://wa.me/972504432225" class="cta-button">Whatsup</a>
@@ -208,7 +205,7 @@
 					<a class="intro__enter animatable">Studio</a>
 				</div>
 				<div class="intro__content intro__content--second animatable">
-					<a href="mailto:order@xydlaboratory.space"><h3 class="intro__content-title animatable">order@xydlaboratory.space</h3></a><p class="intro__content-text animatable">contact us</p>
+					<a href="mailto:xydtalk@gmail.com"><h3 class="intro__content-title animatable">order@xydlaboratory.space</h3></a><p class="intro__content-text animatable">contact us</p>
 					
 				</div>
 				<div class="intro__content intro__content--forth animatable">
@@ -228,10 +225,10 @@
 						<div class="menu__item-inner">
 							<div class="mainmenu">
 							<p class="label1 label--topleft label--line">Talk to Us by Email:</p>
-								<a href="mailto:order@xydlaboratory.space" class="mainmenu__item" style="text-decoration: underline; font-weight: bold">order</a>
-								<a href="mailto:order@xydlaboratory.space" style="font-weight: bold" class="text-decoration: underline;mainmenu__item">@</a>
-								 <a href="mailto:order@xydlaboratory.space" class="mainmenu__item" style="text-decoration: underline;font-weight: bold">xydlaboratory</a>
-								<a href="mailto:order@xydlaboratory.space" class="mainmenu__item" style="text-decoration: underline;font-weight: bold">.space</a>
+								<a href="mailto:xydtalk@gmail.com" class="mainmenu__item" style="text-decoration: underline; font-weight: bold">order@</a>
+								
+								 <a href="mailto:xydtalk@gmail.com" class="mainmenu__item" style="text-decoration: underline;font-weight: bold">xydlaboratory</a>
+								<a href="mailto:xydtalk@gmail.com" class="mainmenu__item" style="text-decoration: underline;font-weight: bold">.space</a>
 							</div>
 							<p class="label label--topleft label--vert-mirror">the important stuff</p>
 							<p class="label label--bottomright label--vert">made by sadage</p>
