commission notes added

--- a/index_uk.html
+++ b/index_uk.html
@@ -246,7 +246,7 @@
         <div class="menu__item-inner">
             <div class="sidemenu">
                 <p><span class="sidemenu__item-inner" style="color: #a09f92">Перш ніж почати</span></p>
-                <a href="#" class="menu__item-hoverlink" style="color: #980a0a; text-decoration: underline;">завантажити шаблон замовлення</a>
+                <a href="download/xyd-commissionNotes.pdf" target="_blank" class="menu__item-hoverlink" style="color: #980a0a; text-decoration: underline;">завантажити шаблон замовлення</a>
             </div>
         </div>
     </div>
