--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 						<div class="menu__item-inner">
 							<div class="sidemenu">
 								<p><span class="sidemenu__item-inner" style="color: #a09f92">Before We Start</span></p>
-								<a href="#" class="menu__item-hoverlink" style="color: #980a0a; text-decoration: underline;">download order template</a>
+								<a href="download/xyd-commissionNotes.pdf" target="_blank" class="menu__item-hoverlink" style="color: #980a0a; text-decoration: underline;">download order template</a>
 							</div>
 						</div>
 					</div>
