watsup link added

--- a/index_uk.html
+++ b/index_uk.html
@@ -237,7 +237,7 @@
         <div class="menu__item-inner">
             <div class="menu__item-map"></div>
             <p><span class="sidemenu__item-inner" style="color: cadetblue;">Для будь-яких питань -</span></p>
-            <a href="#" class="menu__item-hoverlink" style="
+            <a href="https://wa.me/972504432225" class="menu__item-hoverlink" style="
                     margin-top: 3vh;
                     color: #acacac; text-decoration: underline;">whatsapp</a>
         </div>
