preview link updated

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <meta property="og:description" content="Bring your ideas to life with XYD Laboratory's screen printing services. Quality craftsmanship and custom designs tailored to your needs.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://xydlaboratory.space/index.html">
-    <meta property="og:image" content="https://xydlaboratory.space/images/preview.jpg">
+    <meta property="og:image" content="https://xydlaboratory.space/img/preview.jpg">
     <meta property="og:locale" content="en_US">
     <link rel="alternate" hreflang="uk" href="https://xydlaboratory.space/index_uk.html">
     <link rel="alternate" hreflang="he" href="https://xydlaboratory.space/index_he.html">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/base.css">
 	<script>
  		 document.documentElement.className = "js";
