--- a/index_he.html
+++ b/index_he.html
@@ -13,7 +13,7 @@
     <meta property="og:description" content="הפכו את הרעיונות שלכם למציאות עם שירותי הדפסה האיכותיים של XYD Laboratory.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://xydlaboratory.space/index_he.html">
-    <meta property="og:image" content="https://xydlaboratory.space/images/preview.jpg">
+    <meta property="og:image" content="https://xydlaboratory.space/img/preview.jpg">
     <meta property="og:locale" content="he_IL">
     <link rel="alternate" hreflang="uk" href="https://xydlaboratory.space/index-uk.html">
     <link rel="alternate" hreflang="en" href="https://xydlaboratory.space/index.html">
