--- a/index_uk.html
+++ b/index_uk.html
@@ -12,7 +12,7 @@
     <meta property="og:description" content="Перенесіть свої ідеї в життя за допомогою шовкотрафаретного друку XYD Laboratory. Якість та індивідуальність для кожного проєкту.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://xydlaboratory.space/index_uk.html">
-    <meta property="og:image" content="https://xydlaboratory.space/images/preview.jpg">
+    <meta property="og:image" content="https://xydlaboratory.space/img/preview.jpg">
     <meta property="og:locale" content="uk_UA">
     <link rel="alternate" hreflang="en" href="https://xydlaboratory.space/index.html">
     <link rel="alternate" hreflang="he" href="https://xydlaboratory.space/index_he.html">
