--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 							<h3 class="slideshow__item-title">Kids Clothes Printing</h3>
 							<p class="slideshow__item-subtitle">Safety and comfort. Our children’s clothing printing is made with care for the youngest.</p>
 							<div class="cta-button-container">
-							            <button class="cta-button-gallery" data-images='["img/kids1.jpg", "img/kids2.jpg", "img/kids3.jpg"]'>View Examples
+							            <button class="cta-button-gallery" data-images='["img/kids1.jpg", "img/kids2.jpg", "img/kids3.jpg", "img/kids4.jpg"]'>View Examples
             					</button>
 							</div>
 						</div>
