--- a/index_he.html
+++ b/index_he.html
@@ -103,7 +103,7 @@
                 <h3 class="slideshow__item-title">הדפסות על בגדי ילדים</h3>
                 <p class="slideshow__item-subtitle">בטיחות ונוחות. ההדפסות שלנו על בגדי ילדים נעשות עם דאגה לצעירים ביותר.</p>
                 <div class="cta-button-container">
-                                        <button class="cta-button-gallery" data-images='["img/kids1.jpg", "img/kids2.jpg", "img/kids3.jpg"]'>צפו בפריטים
+                                        <button class="cta-button-gallery" data-images='["img/kids1.jpg", "img/kids2.jpg", "img/kids3.jpg", "img/kids4.jpg"]'>צפו בפריטים
                                 </button>
                             </div>
             </div>
