--- a/index_uk.html
+++ b/index_uk.html
@@ -100,7 +100,7 @@
                 <h3 class="slideshow__item-title">Друк на дитячому одязі</h3>
                 <p class="slideshow__item-subtitle">Безпека і комфорт. Наш друк на дитячому одязі створений з турботою про наймолодших.</p>
                 <div class="cta-button-container">
-                                        <button class="cta-button-gallery" data-images='["img/kids1.jpg", "img/kids2.jpg", "img/kids3.jpg"]'>Приклади робіт
+                                        <button class="cta-button-gallery" data-images='["img/kids1.jpg", "img/kids2.jpg", "img/kids3.jpg", "img/kids4.jpg"]'>Приклади робіт
                                 </button>
                             </div>
             </div>
