--- a/index.html
+++ b/index.html
@@ -225,10 +225,10 @@
 						<div class="menu__item-inner">
 							<div class="mainmenu">
 							<p class="label1 label--topleft label--line">Talk to Us by Email:</p>
-								<a href="mailto:xydtalk@gmail.com" class="mainmenu__item" style="text-decoration: underline; font-weight: bold">order@</a>
+								<a href="mailto:xydtalk@gmail.com" class="mainmenu__item" style="text-decoration: underline; font-weight: bold">order@xydlaboratory.space</a>
 								
-								 <a href="mailto:xydtalk@gmail.com" class="mainmenu__item" style="text-decoration: underline;font-weight: bold">xydlaboratory</a>
-								<a href="mailto:xydtalk@gmail.com" class="mainmenu__item" style="text-decoration: underline;font-weight: bold">.space</a>
+								 <!-- <a href="mailto:xydtalk@gmail.com" class="mainmenu__item" style="text-decoration: underline;font-weight: bold">xydlaboratory</a>
+								<a href="mailto:xydtalk@gmail.com" class="mainmenu__item" style="text-decoration: underline;font-weight: bold">.space</a> -->
 							</div>
 							<p class="label label--topleft label--vert-mirror">the important stuff</p>
 							<p class="label label--bottomright label--vert">made by sadage</p>
