--- a/index_uk.html
+++ b/index_uk.html
@@ -225,9 +225,9 @@
         <div class="menu__item-inner">
             <div class="mainmenu">
                 <p class="label1 label--topleft label--line">Напишіть нам на електронну пошту:</p>
-                <a href="mailto:xydtalk@gmail.com" class="mainmenu__item" style="text-decoration: underline; font-weight: bold">order@</a>
-                <a href="mailto:xydtalk@gmail.com" class="mainmenu__item" style="text-decoration: underline;font-weight: bold">xydlaboratory.</a>
-                <a href="mailto:xydtalk@gmail.com" class="mainmenu__item" style="text-decoration: underline;font-weight: bold">space</a>
+                <a href="mailto:xydtalk@gmail.com" class="mainmenu__item" style="text-decoration: underline; font-weight: bold">order@xydlaboratory.space</a>
+                <!-- <a href="mailto:xydtalk@gmail.com" class="mainmenu__item" style="text-decoration: underline;font-weight: bold">xydlaboratory.</a>
+                <a href="mailto:xydtalk@gmail.com" class="mainmenu__item" style="text-decoration: underline;font-weight: bold">space</a> -->
             </div>
             <p class="label label--topleft label--vert-mirror">важливі речі</p>
             <p class="label label--bottomright label--vert">створено sadage</p>
