--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
 		  };
 	  supportsCssVars();
 	</script>
+			<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z0SLD9R9G3"></script>
+			<script>
+			  window.dataLayer = window.dataLayer || [];
+			  function gtag(){dataLayer.push(arguments);}
+			  gtag('js', new Date());
+
+			  gtag('config', 'G-Z0SLD9R9G3');
+			</script>
 </head>
 <body class="loading">
 		<svg class="hidden">
